force-app/main/default/objects/mkto_si__WebActivityCache__c/mkto_si__WebActivityCache__c.object-meta.xml
<CustomObject>
    <label>WebActivityCache</label>
    <nameField>
        <label>WebActivityCache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WebActivityCache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>