force-app/main/default/objects/mkto_si__WebActivityCache__c/fields/mkto_si__ActivityDT__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__ActivityDT__c</fullName>
    <label>ActivityDT</label>
    <type>DateTime</type>
</CustomField>