force-app/main/default/objects/mkto_si__WebActivityCache__c/fields/mkto_si__ContactLink__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__ContactLink__c</fullName>
    <label>ContactLink</label>
    <type>Url</type>
</CustomField>