force-app/main/default/objects/mkto_si__WebActivityCache__c/fields/mkto_si__SActivityDT__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__SActivityDT__c</fullName>
    <label>SActivityDT</label>
    <length>25</length>
    <type>Text</type>
</CustomField>