force-app/main/default/objects/mkto_si__WebActivityCache__c/fields/mkto_si__SearchLink__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__SearchLink__c</fullName>
    <label>SearchLink</label>
    <type>Url</type>
</CustomField>