force-app/main/default/objects/mkto_si__WebActivityCache__c/fields/mkto_si__TotalCount__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__TotalCount__c</fullName>
    <label>TotalCount</label>
    <length>9</length>
    <type>Text</type>
</CustomField>