force-app/main/default/objects/mkto_si__WebActivityCache__c/fields/mkto_si__WPageLinkName__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__WPageLinkName__c</fullName>
    <label>WPageLinkName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>